step 5: Add Backend Integration Tests
Co-authored-by: Gallop Intelligence <bot@gallopintelligence.com>